--- a/inPixtagram/Base.lproj/Main.storyboard
+++ b/inPixtagram/Base.lproj/Main.storyboard
@@ -1,24 +1,217 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Lh-gV-FTT">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Home View Controller-->
+        <scene sceneID="qvZ-IJ-xhv">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <viewController id="cX2-Fw-LLd" customClass="HomeViewController" customModule="inPixtagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pmq-7P-MN6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="2fd-pr-HRR">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="AaP-c7-dub">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="dI3-HP-Dg3">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.91714321649999997" green="1" blue="0.99546276810000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wQE-IG-AKD" firstAttribute="trailing" secondItem="2fd-pr-HRR" secondAttribute="trailing" id="8nA-eW-P4J"/>
+                            <constraint firstItem="wQE-IG-AKD" firstAttribute="bottom" secondItem="2fd-pr-HRR" secondAttribute="bottom" id="Lbe-Jy-Uqj"/>
+                            <constraint firstItem="2fd-pr-HRR" firstAttribute="leading" secondItem="wQE-IG-AKD" secondAttribute="leading" id="TGn-iP-aMK"/>
+                            <constraint firstItem="2fd-pr-HRR" firstAttribute="top" secondItem="wQE-IG-AKD" secondAttribute="top" id="jVi-Nn-g8x"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wQE-IG-AKD"/>
                     </view>
+                    <navigationItem key="navigationItem" id="lvK-1g-caS"/>
+                    <connections>
+                        <outlet property="collectionView" destination="2fd-pr-HRR" id="BYG-NG-Lay"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e3i-L0-EcA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="2492" y="11.244377811094454"/>
+        </scene>
+        <!--Popup Image View Controller-->
+        <scene sceneID="X1x-Oy-Nw3">
+            <objects>
+                <viewController storyboardIdentifier="PopupImageViewController" id="fnq-CC-Cjx" customClass="PopupImageViewController" customModule="inPixtagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oSf-We-Ttt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c8e-9w-4uY">
+                                <rect key="frame" x="0.0" y="533.5" width="375" height="133.5"/>
+                                <color key="backgroundColor" red="1" green="0.40000000000000002" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Save"/>
+                                <connections>
+                                    <action selector="saveImage:" destination="fnq-CC-Cjx" eventType="touchUpInside" id="PFJ-Kw-Xvo"/>
+                                </connections>
+                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sao-3b-4Ar">
+                                <rect key="frame" x="0.0" y="20" width="375" height="533.5"/>
+                                <color key="backgroundColor" red="0.98340876089999996" green="1" blue="0.694765729" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="crV-VX-RJ0">
+                                <rect key="frame" x="16" y="20" width="46" height="30"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="dismiss:" destination="fnq-CC-Cjx" eventType="touchUpInside" id="3ud-Ji-dIZ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.2351574739" green="0.84984647069999997" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="LW3-IA-GOj" firstAttribute="trailing" secondItem="c8e-9w-4uY" secondAttribute="trailing" id="AGK-NZ-JCJ"/>
+                            <constraint firstItem="Sao-3b-4Ar" firstAttribute="top" secondItem="LW3-IA-GOj" secondAttribute="top" id="EAB-qC-gYh"/>
+                            <constraint firstAttribute="bottom" secondItem="c8e-9w-4uY" secondAttribute="bottom" id="ORv-CG-Tnl"/>
+                            <constraint firstItem="c8e-9w-4uY" firstAttribute="height" secondItem="oSf-We-Ttt" secondAttribute="height" multiplier="0.2" id="TI9-8I-Jja"/>
+                            <constraint firstItem="Sao-3b-4Ar" firstAttribute="leading" secondItem="LW3-IA-GOj" secondAttribute="leading" id="Uta-QH-lLZ"/>
+                            <constraint firstItem="c8e-9w-4uY" firstAttribute="leading" secondItem="LW3-IA-GOj" secondAttribute="leading" id="iIo-p8-pcp"/>
+                            <constraint firstItem="Sao-3b-4Ar" firstAttribute="height" secondItem="oSf-We-Ttt" secondAttribute="height" multiplier="0.8" id="kFp-Iy-I6Y"/>
+                            <constraint firstItem="crV-VX-RJ0" firstAttribute="top" secondItem="LW3-IA-GOj" secondAttribute="top" id="viK-qb-bkR"/>
+                            <constraint firstItem="crV-VX-RJ0" firstAttribute="leading" secondItem="LW3-IA-GOj" secondAttribute="leading" constant="16" id="zlu-VS-lxR"/>
+                            <constraint firstItem="Sao-3b-4Ar" firstAttribute="trailing" secondItem="LW3-IA-GOj" secondAttribute="trailing" id="zps-ec-jKl"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LW3-IA-GOj"/>
+                    </view>
+                    <connections>
+                        <outlet property="largeImageView" destination="Sao-3b-4Ar" id="S3l-jB-pAj"/>
+                        <outlet property="saveButton" destination="c8e-9w-4uY" id="gns-8J-Ydb"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BwO-9D-Ie1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3753" y="157"/>
+        </scene>
+        <!--Saved Images View Controller-->
+        <scene sceneID="jSy-MW-A1g">
+            <objects>
+                <viewController id="aAY-7n-7i9" customClass="SavedImagesViewController" customModule="inPixtagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jpX-TX-wQx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="0NA-cx-8cQ">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dYI-on-O67">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="KGw-bW-SFO">
+                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.5450980392" green="0.67450980390000004" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="0NA-cx-8cQ" firstAttribute="leading" secondItem="hrp-mg-hBd" secondAttribute="leading" id="3Dc-fm-cRy"/>
+                            <constraint firstItem="hrp-mg-hBd" firstAttribute="bottom" secondItem="0NA-cx-8cQ" secondAttribute="bottom" id="4Jp-QI-qPU"/>
+                            <constraint firstItem="0NA-cx-8cQ" firstAttribute="top" secondItem="hrp-mg-hBd" secondAttribute="top" id="cQK-ST-fUT"/>
+                            <constraint firstItem="hrp-mg-hBd" firstAttribute="trailing" secondItem="0NA-cx-8cQ" secondAttribute="trailing" id="qn9-M1-0uC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hrp-mg-hBd"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="anN-8J-2Gj"/>
+                    <connections>
+                        <outlet property="collectionView" destination="0NA-cx-8cQ" id="vZa-BC-sTf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eA2-bt-aNv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2492" y="879"/>
+        </scene>
+        <!--Trend Images-->
+        <scene sceneID="uxz-Nh-OzG">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m4y-zR-Oxd" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Trend Images" id="BFQ-XX-Kdq"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Ner-f3-UaI">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cX2-Fw-LLd" kind="relationship" relationship="rootViewController" id="ckA-lC-URc"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lMn-ee-31k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1552.8" y="11.244377811094454"/>
+        </scene>
+        <!--Custom Tab Bar Controller View Controller-->
+        <scene sceneID="pkU-d5-DRH">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="1Lh-gV-FTT" customClass="CustomTabBarControllerViewController" customModule="inPixtagram" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="clJ-Y7-o4c">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="m4y-zR-Oxd" kind="relationship" relationship="viewControllers" id="vwq-4v-RjD"/>
+                        <segue destination="E5q-v7-CiN" kind="relationship" relationship="viewControllers" id="D9q-OG-KWQ"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BXh-pL-8I8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="613.60000000000002" y="11.244377811094454"/>
+        </scene>
+        <!--Gallery-->
+        <scene sceneID="rtK-CI-28W">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="E5q-v7-CiN" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Gallery" id="Yjz-Ih-NqX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yvt-a6-QHM">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="aAY-7n-7i9" kind="relationship" relationship="rootViewController" id="G6w-DD-gwU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QDK-fZ-6u7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1553" y="880"/>
         </scene>
     </scenes>
 </document>
