--- a/ImageCVCell.xib
+++ b/ImageCVCell.xib
@@ -22,7 +22,7 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="etZ-mj-FMp">
                         <rect key="frame" x="0.0" y="0.0" width="353" height="301"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Udw-gU-eOq">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Udw-gU-eOq" customClass="HSxUIImageView" customModule="inPixtagram" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="353" height="301"/>
                             </imageView>
                         </subviews>
