--- a/inPixtagram/Base.lproj/Main.storyboard
+++ b/inPixtagram/Base.lproj/Main.storyboard
@@ -73,7 +73,7 @@
                                     <action selector="saveImage:" destination="fnq-CC-Cjx" eventType="touchUpInside" id="PFJ-Kw-Xvo"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sao-3b-4Ar">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sao-3b-4Ar" customClass="HSxUIImageView" customModule="inPixtagram" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="20" width="375" height="533.5"/>
                                 <color key="backgroundColor" red="0.98340876089999996" green="1" blue="0.694765729" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </imageView>
